# bazel-multiprojects

./: .gitignore  BUILD  Gopkg.toml  Makefile  README.md  WORKSPACE  go.mod  go.sum
.circleci/: config.yml
doc/: nodeport.md
infra/image/ops/: Dockerfile
pkg/: BUILD
pkg/bot/: BUILD.bazel  main.go
pkg/bot/client/: BUILD.bazel  slackext.go
pkg/bot/handler/: BUILD.bazel  action.go  interaction.go  slack.go  submission.go  type.go
pkg/bot/k8s/base/: deployment.yaml  service.yaml
pkg/bot/k8s/overlays/default/: bot-secret.yaml  deployment-patch.yaml  service-patch.yaml  skaffold.yaml
pkg/bot/listener/: BUILD.bazel  slack.go
pkg/bot/repository/: BUILD.bazel  deploy.go
pkg/common_go/util/: BUILD.bazel  string.go  string_test.go
pkg/common_kt/: BUILD
pkg/common_kt/util/: string.kt
pkg/ops/: BUILD.bazel  main.go
pkg/ops/client/: BUILD.bazel  github.go
pkg/ops/cmd/: BUILD.bazel  commands.go
pkg/ops/cmd/deploy/: BUILD.bazel  deploy.go
pkg/ops/handler/: BUILD.bazel  deploy.go
pkg/ops/k8s/base/: deployment.yaml  service.yaml
pkg/ops/k8s/knative-build/: .envrc  bazel-build.yaml  build-template-bazel.yaml  secret.yaml  service-account.yaml
pkg/ops/k8s/overlays/default/: deployment-patch.yaml  github-secret.yaml  service-patch.yaml  skaffold.yaml
pkg/ops/server/: BUILD.bazel  deploy.go
pkg/ops/usecase/: BUILD.bazel  deploy.go
pkg/public_go/: BUILD.bazel  injector.go  main.go  main_test.go  wire_gen.go
pkg/public_go/k8s/: deployment.yaml  kustomization.yaml  service.yaml
pkg/public_go/k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
pkg/public_go/k8s/overlays/blue/: .envrc  deployment-patch.yaml  kustomization.yaml  service-patch.yaml  skaffold.yaml
pkg/public_go/k8s/overlays/default/: .envrc  deployment-patch.yaml  kustomization.yaml  service-patch.yaml  skaffold.yaml
pkg/public_go/k8s/overlays/dev/: .envrc  deployment-patch.yaml  kustomization.yaml  service-patch.yaml  skaffold.yaml
pkg/public_go/usecase/: BUILD.bazel  greet_usecase.go
pkg/public_kt/: BUILD  main.kt
proto/echo/: BUILD.bazel  echo.pb.go  echo.proto
proto/greet/: BUILD.bazel  greet.pb.go  greet.proto
proto/ops/: BUILD.bazel  deploy.pb.go  deploy.proto
prow/: unit-tests.sh
script/: circleci.sh  namespace.sh
