load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/ops",
    visibility = ["//visibility:private"],
    deps = [
        "@io_k8s_sigs_kustomize//k8sdeps:go_default_library",
        "@io_k8s_sigs_kustomize//pkg/fs:go_default_library",
        "@io_k8s_sigs_kustomize//pkg/loader:go_default_library",
        "@io_k8s_sigs_kustomize//pkg/target:go_default_library",
    ],
)

go_binary(
    name = "ops",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
