load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/ops",
    visibility = ["//visibility:private"],
    deps = ["//pkg/ops/cmd:go_default_library"],
)

go_binary(
    name = "ops",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
