load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/ops",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/ops/client:go_default_library",
        "//pkg/ops/handler:go_default_library",
        "//pkg/ops/server:go_default_library",
        "//pkg/ops/usecase:go_default_library",
        "//proto/ops:go_default_library",
        "@com_github_kelseyhightower_envconfig//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "ops",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "container_image",
    base = "@ops_base_image//image",
    files = [":ops"],
    cmd = [
        "/ops",
    ],
)

container_push(
    name = "container_push",
    image = ":container_image",
    format = "Docker",
    registry = "index.docker.io",
    repository = "soushin/bazel-multiprojects-ops",
    tag = "$(IMAGE_TAG)",
)
