load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "wire_gen.go",
    ],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/public_go",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/common_go/util:go_default_library",
        "//pkg/public_go/usecase:go_default_library",
        "//proto/echo:go_default_library",
        "//proto/greet:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "public_go",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)

# --

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "public_go_image",
    base = "@distroless_base_image//image",
    files = [":public_go"],
    cmd = [
        "/public_go",
        "-greet",
        "Awesome",
    ],
)

container_push(
    name = "push_public_go_image",
    image = ":public_go_image",
    format = "Docker",
    registry = "index.docker.io",
    repository = "soushin/bazel-multiprojects-go",
    tag = "latest",
)
