load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@build_stack_rules_proto//go:go_grpc_compile.bzl", "go_grpc_compile")

proto_library(
    name = "greet_proto",
    srcs = ["greet.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "greet_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/soushin/bazel-multiprojects/proto/greet",
    proto = ":greet_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":greet_go_proto"],
    importpath = "github.com/soushin/bazel-multiprojects/proto/greet",
    visibility = ["//visibility:public"],
)

go_grpc_compile(
    name = "proto_buf",
    deps = [":greet_proto"],
)
