load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["slackext.go"],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/bot/client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_nlopes_slack//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
