load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["slack.go"],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/bot/listener",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bot/handler:go_default_library",
        "//proto/ops:go_default_library",
        "@com_github_nlopes_slack//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
