load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["commands.go"],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/ops/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ops/cmd/deploy:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
