load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["deploy.go"],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/ops/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ops/client:go_default_library",
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
