load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["greet_usecase.go"],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/public_go/usecase",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_cloud//wire:go_default_library"],
)
