load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["deploy.go"],
    importpath = "github.com/soushin/bazel-multiprojects/pkg/ops/cmd/deploy",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ghodss_yaml//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
